--- a/css/restyle.css
+++ b/css/restyle.css
@@ -368,6 +368,11 @@ a {
   margin-top: 10px;
 }
 
+.en5 {
+  font-size: 35px;
+  font-weight: 500;
+}
+
 .eni {
   font-size: 40px;
   font-weight: 399;
