--- a/css/restyle.css
+++ b/css/restyle.css
@@ -362,8 +362,8 @@ a {
 }
 
 .en4 {
-  font-size: 33px;
-  font-weight: 300;
+  font-size: 34px;
+  font-weight: 500;
   margin-bottom: 10px;
   margin-top: 10px;
 }
@@ -371,6 +371,20 @@ a {
 .en5 {
   font-size: 35px;
   font-weight: 500;
+}
+
+.en6 {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.en7 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .eni {
@@ -382,10 +396,7 @@ a {
 
 
 
-.en4 {
-  font-size: 24px;
-  font-weight: 400;
-}
+
 
 .en2s {
   font-size: 65px;
